@@ -19,6 +19,9 @@
 %define base 2.4.9-e
 %define kver %{base}.12
 
+# The minimum -support package required for the kernel bits.
+%define support_ver     0.9.1
+
 Summary: The Oracle Automatic Storage Management library driver.
 Name: oracleasm-%{base}
 Version: @DIST_VERSION@
@@ -33,7 +36,7 @@ Packager: Joel Becker <joel.becker@oracle.com>
 Provides: oracleasm = %{version}
 AutoReqProv: no
 Requires: kernel >= %{kver}
-Requires: oracleasm-support >= 0.9.0
+Requires: oracleasm-support >= %{support_ver}
 BuildRequires: kernel-source >= %{kver}
 
 
@@ -50,7 +53,7 @@ Summary: The Oracle Automatic Storage Management library driver for SMP systems.
 Group: System Environment/Kernel
 Provides: oracleasm = %{version}
 Requires: kernel-smp >= %{kver}
-Requires: oracleasm-support >= 0.9.0
+Requires: oracleasm-support >= %{support_ver}
 BuildRequires: kernel-source >= %{kver}
 AutoReqProv: no
 
@@ -67,7 +70,7 @@ Summary: The Oracle Automatic Storage Management library driver for enterprise s
 Group: System Environment/Kernel
 Provides: oracleasm = %{version}
 Requires: kernel-enterprise >= %{kver}
-Requires: oracleasm-support >= 0.9.0
+Requires: oracleasm-support >= %{support_ver}
 BuildRequires: kernel-source >= %{kver}
 AutoReqProv: no
 
@@ -85,7 +88,7 @@ Summary: The Oracle Automatic Storage Management library driver for summit based
 Group: System Environment/Kernel
 Provides: oracleasm = %{version}
 Requires: kernel-summit >= %{kver}
-Requires: oracleasm-support >= 0.9.0
+Requires: oracleasm-support >= %{support_ver}
 BuildRequires: kernel-source >= %{kver}
 AutoReqProv: no
 
@@ -103,7 +106,7 @@ Summary: The Oracle Automatic Storage Management library driver for debugging sy
 Group: System Environment/Kernel
 Provides: oracleasm = %{version}
 Requires: kernel-debug >= %{kver}
-Requires: oracleasm-support >= 0.9.0
+Requires: oracleasm-support >= %{support_ver}
 BuildRequires: kernel-source >= %{kver}
 AutoReqProv: no
 
